# mdv

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  CMakeLists.txt  README.ja.md  README.md
resources/: mdv.qrc
resources/linux/: com.fukuyori.mdv.metainfo.xml  mdv.desktop
resources/macos/: Info.plist.in  mdv.icns
resources/windows/: mdv.rc
scripts/: build-windows.ps1  linux_build_release.sh  linux_package.sh  macos_build_release.sh  macos_generate_icon.sh  macos_sign_dmg_notarize.sh  package-windows-inno.ps1
scripts/macos/: entitlements.plist
src/: main.cpp
tools/icon_renderer/: CMakeLists.txt  main.cpp
